--- a/backend/gqlgen.yml
+++ b/backend/gqlgen.yml
@@ -1,2 +1,31 @@
 schema:
   - ./graphql/schema.graphql
+
+# Where should the generated server code go?
+exec:
+  filename: graphql/generated.go
+  package: graphql
+
+# Where should any generated models go?
+model:
+  filename: graphql/models_gen.go
+  package: graphql
+
+# Where should the resolver implementations go?
+resolver:
+  layout: follow-schema
+  dir: graphql/resolvers
+  package: resolvers
+  filename_template: "{name}.resolvers.go"
+
+# Optional: Autobind tells gqlgen to search for any type names in the schema in these go packages
+# If they match it will use them, otherwise it will generate them.
+autobind:
+  - "hub-control-plane/backend/models"
+
+# Configure model mappings to use your existing entity types
+models:
+  User:
+    model: hub-control-plane/backend/models.UserEntity
+  Contact:
+    model: hub-control-plane/backend/models.ContactEntity
