--- a/infrastructure/infrastructure.yaml
+++ b/infrastructure/infrastructure.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'Hub Control Plane - Single Table DynamoDB with Redis Cache Infrastructure'
+Description: 'Hub Control Plane - EC2, ALB, Single Table DynamoDB with Redis Cache Infrastructure'
 
 Parameters:
   Environment:
@@ -10,7 +10,36 @@ Parameters:
       - staging
       - prod
     Description: Environment name
+
+  EnvironmentName:
+    Type: String
+    Default: hub-control-plane
+
+  AppPrefix:
+    Type: String
+    Default: hcp
+
+  InstanceType:
+    Description: EC2 instance type for Go backend
+    Type: String
+    Default: t3.medium
+    AllowedValues:
+      - t3.micro
+      - t3.small
+      - t3.medium
+      - t3.large
   
+  KeyName:
+    Description: EC2 KeyPair name for SSH access
+    Type: AWS::EC2::KeyPair::KeyName
+    Default: ~/.ssh/my-key.pem
+  
+  SSHLocation:
+    Description: IP address range that can SSH to EC2 instances
+    Type: String
+    Default: 0.0.0.0/0
+    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
+
   DynamoDBTableName:
     Type: String
     Default: application-table
@@ -27,6 +56,14 @@ Parameters:
     Description: ElastiCache Redis node type
 
 Mappings:
+  AWSRegionAMI:
+    us-east-1:
+      AMI: ami-080c353f4798a202f
+    us-west-2:
+      AMI: ami-0a8e758f5e873d1c1
+    eu-west-1:
+      AMI: ami-0d71ea30463e0ff8d
+
   EnvironmentConfig:
     dev:
       DynamoDBReadCapacity: 5
@@ -40,6 +77,10 @@ Mappings:
       DynamoDBReadCapacity: 25
       DynamoDBWriteCapacity: 25
       RedisNumNodes: 3
+
+Conditions:
+  IsProd: !Equals [!Ref Environment, prod]
+
 
 Resources:
   # ==========================================
@@ -56,6 +97,19 @@ Resources:
           Value: !Sub ${AWS::StackName}-vpc
         - Key: Environment
           Value: !Ref Environment
+
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvironmentName}-${AppPrefix}-igw
+
+  AttachGateway:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref InternetGateway
 
   PublicSubnet1:
     Type: AWS::EC2::Subnet
@@ -99,19 +153,6 @@ Resources:
         - Key: Name
           Value: !Sub ${AWS::StackName}-private-subnet-2
 
-  InternetGateway:
-    Type: AWS::EC2::InternetGateway
-    Properties:
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-igw
-
-  AttachGateway:
-    Type: AWS::EC2::VPCGatewayAttachment
-    Properties:
-      VpcId: !Ref VPC
-      InternetGatewayId: !Ref InternetGateway
-
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
@@ -139,6 +180,209 @@ Resources:
     Properties:
       SubnetId: !Ref PublicSubnet2
       RouteTableId: !Ref PublicRouteTable
+
+  # ===================================
+  # Security Groups
+  # ===================================
+  ALBSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security group for Application Load Balancer
+      VpcId: !Ref VPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          CidrIp: 0.0.0.0/0
+      SecurityGroupEgress:
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvironmentName}-${AppPrefix}-alb-sg
+
+  BackendSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security group for Go backend servers
+      VpcId: !Ref VPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 8080
+          ToPort: 8080
+          SourceSecurityGroupId: !Ref ALBSecurityGroup
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: !Ref SSHLocation
+      SecurityGroupEgress:
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvironmentName}-${AppPrefix}-backend-sg
+
+  # ===================================
+  # Application Load Balancer
+  # ===================================
+  ApplicationLoadBalancer:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties:
+      Name: !Sub ${EnvironmentName}-${AppPrefix}-alb
+      Subnets:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+      SecurityGroups:
+        - !Ref ALBSecurityGroup
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvironmentName}-${AppPrefix}-alb
+
+  ALBTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      Name: !Sub ${EnvironmentName}-${AppPrefix}-backend-tg
+      Port: 8080
+      Protocol: HTTP
+      VpcId: !Ref VPC
+      HealthCheckEnabled: true
+      HealthCheckPath: /health
+      HealthCheckProtocol: HTTP
+      HealthCheckIntervalSeconds: 30
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 2
+      UnhealthyThresholdCount: 3
+      TargetType: instance
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvironmentName}-${AppPrefix}-backend-tg
+
+  ALBListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref ALBTargetGroup
+      LoadBalancerArn: !Ref ApplicationLoadBalancer
+      Port: 80
+      Protocol: HTTP
+
+  # ===================================
+  # IAM Roles
+  # ===================================
+  EC2InstanceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ec2.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
+      Policies:
+        - PolicyName: ELBRegistrationPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - elasticloadbalancing:RegisterTargets
+                  - elasticloadbalancing:DeregisterTargets
+                  - elasticloadbalancing:DescribeTargetHealth
+                Resource: !Ref ALBTargetGroup
+              - Effect: Allow
+                Action:
+                  - ec2:DescribeInstances
+                Resource: '*'
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvironmentName}-${AppPrefix}-ec2-role
+
+  EC2InstanceProfile:
+    Type: AWS::IAM::InstanceProfile
+    Properties:
+      Roles:
+        - !Ref EC2InstanceRole
+
+  # ===================================
+  # EC2 Backend Instance
+  # ===================================
+  BackendInstance:
+    Type: AWS::EC2::Instance
+    Properties:
+      InstanceType: !Ref InstanceType
+      ImageId: !FindInMap [AWSRegionAMI, !Ref 'AWS::Region', AMI]
+      KeyName: !Ref KeyName
+      IamInstanceProfile: !Ref EC2InstanceProfile
+      NetworkInterfaces:
+        - AssociatePublicIpAddress: true
+          DeviceIndex: 0
+          GroupSet:
+            - !Ref BackendSecurityGroup
+          SubnetId: !Ref PublicSubnet1
+      UserData:
+        Fn::Base64: !Sub |
+          #!/bin/bash
+          set -e
+          
+          # Update system
+          apt-get update -y
+          apt-get upgrade -y
+          
+          # Install Go
+          wget https://go.dev/dl/go1.21.5.linux-amd64.tar.gz
+          rm -rf /usr/local/go
+          tar -C /usr/local -xzf go1.21.5.linux-amd64.tar.gz
+          echo 'export PATH=$PATH:/usr/local/go/bin' >> /etc/profile
+          export PATH=$PATH:/usr/local/go/bin
+          
+          # Install Node.js (for potential frontend builds)
+          curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
+          apt-get install -y nodejs
+          
+          # Install AWS CLI v2
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          apt-get install -y unzip
+          unzip awscliv2.zip
+          ./aws/install
+          rm -rf aws awscliv2.zip
+          
+          # Install CloudWatch agent
+          wget https://s3.amazonaws.com/amazoncloudwatch-agent/ubuntu/amd64/latest/amazon-cloudwatch-agent.deb
+          dpkg -i -E ./amazon-cloudwatch-agent.deb
+          rm amazon-cloudwatch-agent.deb
+          
+          # Create application directory
+          mkdir -p /opt/app
+          chown ubuntu:ubuntu /opt/app
+          
+          # Set environment variables
+          echo "export AWS_REGION=${AWS::Region}" >> /home/ubuntu/.bashrc
+          echo "export ALB_DNS=${ApplicationLoadBalancer.DNSName}" >> /home/ubuntu/.bashrc
+          
+          # Get instance ID from metadata service and register with target group
+          TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
+          INSTANCE_ID=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)
+          
+          aws elbv2 register-targets \
+            --target-group-arn ${ALBTargetGroup} \
+            --targets Id=$INSTANCE_ID \
+            --region ${AWS::Region}
+          
+          # Signal completion
+          echo "Instance setup completed at $(date)" > /home/ubuntu/setup-complete.log
+          echo "Instance ID: $INSTANCE_ID" >> /home/ubuntu/setup-complete.log
+          echo "Registered with target group: ${ALBTargetGroup}" >> /home/ubuntu/setup-complete.log
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvironmentName}-${AppPrefix}-backend-instance
 
   # ==========================================
   # DYNAMODB TABLE - Single Table Design
@@ -304,9 +548,6 @@ Resources:
         - Name: ReplicationGroupId
           Value: !Ref RedisCluster
 
-Conditions:
-  IsProd: !Equals [!Ref Environment, prod]
-
 Outputs:
   VpcId:
     Description: VPC ID
@@ -330,7 +571,7 @@ Outputs:
     Description: Redis cluster endpoint
     Value: !GetAtt RedisCluster.PrimaryEndPoint.Address
     Export:
-      Name: !Sub ${AWS::StackName}-RedisEndpoint
+      Name: !Sub ${AWS::StackName}-RedisEndPoint
 
   RedisPort:
     Description: Redis cluster port
@@ -355,3 +596,19 @@ Outputs:
     Value: !Ref PrivateSubnet2
     Export:
       Name: !Sub ${AWS::StackName}-PrivateSubnet2
+
+  ALBEndpoint:
+    Description: Application Load Balancer endpoint for backend API
+    Value: !GetAtt ApplicationLoadBalancer.DNSName
+
+  BackendInstancePublicIP:
+    Description: Public IP of backend instance
+    Value: !GetAtt BackendInstance.PublicIp
+
+  VPCId:
+    Description: VPC ID
+    Value: !Ref VPC
+  
+  TargetGroupArn:
+    Description: Target Group ARN for backend instances
+    Value: !Ref ALBTargetGroup  
